Adding second lambda

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy-products-services": "cd ./products-service && serverless deploy",
-    "remove-products-services": "cd ./products-service && serverless remove"
+    "remove-products-services": "cd ./products-service && serverless remove",
+    "test-get-products-api": "cd ./products-service && serverless invoke --function get-products"
   },
   "author": "Jorge Frias",
   "license": "ISC"
