--- a/products-service/serverless.yml
+++ b/products-service/serverless.yml
@@ -60,14 +60,18 @@ provider:
 
 functions:
   get-products:
-    handler: handler.getProducts
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - httpApi:
-#          path: /users/create
-#          method: get
+    handler: handler.getProductList
+    events:
+      - httpApi:
+          path: /products
+          method: get
+
+  get-unique-product:
+    handler: handler-unique.getProductById
+    events:
+      - httpApi:
+          path: /products/{id}
+          method: get          
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
