--- a/products-service/serverless.yml
+++ b/products-service/serverless.yml
@@ -31,6 +31,13 @@ custom:
 provider:
   name: aws
   runtime: nodejs12.x
+  environment:
+    PG_HOST: ${file(../env.json):DB_ACCESS.PG_HOST}
+    PG_PORT: ${file(../env.json):DB_ACCESS.PG_PORT}
+    PG_DATABASE: ${file(../env.json):DB_ACCESS.PG_DATABASE}
+    PG_USERNAME: ${file(../env.json):DB_ACCESS.PG_USERNAME}
+    PG_PASSWORD: ${file(../env.json):DB_ACCESS.PG_PASSWORD}
+
 
 # you can overwrite defaults here
   stage: dev
