--- a/products-service/package.json
+++ b/products-service/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "pg": "^8.7.3",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "yup": "^0.32.11"
   }
 }
