--- a/products-service/serverless.yml
+++ b/products-service/serverless.yml
@@ -37,6 +37,8 @@ provider:
     PG_DATABASE: ${file(../env.json):DB_ACCESS.PG_DATABASE}
     PG_USERNAME: ${file(../env.json):DB_ACCESS.PG_USERNAME}
     PG_PASSWORD: ${file(../env.json):DB_ACCESS.PG_PASSWORD}
+  httpApi:
+    cors: true
 
 
 # you can overwrite defaults here
