Import product done

--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -23,28 +23,28 @@ frameworkVersion: '3'
 provider:
   name: aws
   runtime: nodejs12.x
+  httpApi:
+    cors: true
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action: "s3:ListBucket"
+      Resource: "arn:aws:s3:::s3-bucket-products"
+    - Effect: "Allow"
+      Action:
+        - "s3:*"
+      Resource: 
+        - "arn:aws:s3:::s3-bucket-products/*"
+          
 
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
+  # you can overwrite defaults here
+  stage: dev
+  region: us-east-1
+
+
 
 # you can add statements to the Lambda function's IAM Role here
-#  iam:
-#    role:
-#      statements:
-#        - Effect: "Allow"
-#          Action:
-#            - "s3:ListBucket"
-#          Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", { "Ref" : "ServerlessDeploymentBucket" } ] ]  }
-#        - Effect: "Allow"
-#          Action:
-#            - "s3:PutObject"
-#          Resource:
-#            Fn::Join:
-#              - ""
-#              - - "arn:aws:s3:::"
-#                - "Ref" : "ServerlessDeploymentBucket"
-#                - "/*"
+
+
 
 # you can define service wide environment variables here
 #  environment:
@@ -59,8 +59,19 @@ provider:
 #    - include-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  get-file-names:
+    handler: handler.getFileNames
+    events:
+      - httpApi:
+          path: /listed-files
+          method: get
+  
+  import-products-file:
+    handler: importProducts.importProductsFile
+    events:
+      - httpApi:
+          path: /import/{name}
+          method: get
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
