--- a/import-service/package.json
+++ b/import-service/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^3.0.0",
-    "csvtojson": "^2.0.10"
+    "csvtojson": "^2.0.10",
+    "pg": "^8.7.3"
   }
 }
