--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -34,13 +34,48 @@ provider:
         - "s3:*"
       Resource: 
         - "arn:aws:s3:::s3-bucket-products/*"
-          
+    - Effect: "Allow"
+      Action: "sqs:*"
+      Resource: 
+        - Fn::GetAtt: [SQSQueue, Arn]
+    - Effect: "Allow"
+      Action: "sns:*"
+      Resource: 
+        - Ref: SNSTopic
+
+  environment:
+    SQS_URL:
+      Ref: SQSQueue
+    SNS_ARN:
+      Ref: SNSTopic
+    PG_HOST: ${file(../env.json):DB_ACCESS.PG_HOST}
+    PG_PORT: ${file(../env.json):DB_ACCESS.PG_PORT}
+    PG_DATABASE: ${file(../env.json):DB_ACCESS.PG_DATABASE}
+    PG_USERNAME: ${file(../env.json):DB_ACCESS.PG_USERNAME}
+    PG_PASSWORD: ${file(../env.json):DB_ACCESS.PG_PASSWORD}
 
   # you can overwrite defaults here
   stage: dev
   region: us-east-1
 
 
+resources:
+  Resources:
+    SQSQueue:
+      Type: "AWS::SQS::Queue"
+      Properties:
+        QueueName: catalogItemsQueue
+    SNSTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        TopicName: product_created
+    SNSSubscription:
+      Type: AWS::SNS::Subscription
+      Properties:
+        Endpoint: Jorge_Frias@epam.com
+        Protocol: email
+        TopicArn:
+          Ref: SNSTopic  
 
 # you can add statements to the Lambda function's IAM Role here
 
@@ -82,6 +117,16 @@ functions:
           rules:
             - prefix: uploaded/
           existing: true
+
+  catalog-items-queue:
+    handler: catalogsHandler.catalogsBatchProcess
+    events:
+      - sqs:
+          batchSize: 5
+          arn:
+            Fn::GetAtt:
+              - SQSQueue
+              - Arn
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
